fix home icon being in the wrong position

--- a/AlanWalkerTheme/visual-refresh/plugins.css
+++ b/AlanWalkerTheme/visual-refresh/plugins.css
@@ -463,7 +463,7 @@ body .pc-notices .pc-notice-container {
     }
   }
 }
-.bar_c38106:has(> #channelTabs-container) {
+#app-mount .bar_c38106:has(> #channelTabs-container) {
   & + .content_c48ade {
     .guilds_c48ade {
       height: calc(100% - var(--guild-margin-bottom));
